src/objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Educational_Requirements__c</fullName>
        <label>Educational Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JobTitle__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <label>Responsibilities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <type>TextArea</type>
    </fields>
    <label>Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>JobTitle__c</columns>
        <columns>Description__c</columns>
        <columns>Account__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>J-{00000}</displayFormat>
        <label>Job Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>